--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.1.15",
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
