--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@leenguyen/react-flip-clock-countdown": "^1.7.2",
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.1.15",
     "daisyui": "^5.3.7",
@@ -23,6 +24,7 @@
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
+  
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
