--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.7.2",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.1.15",
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
@@ -24,7 +26,6 @@
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
-  
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
