--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^5.3.7",
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
